<resources>
    <string name="app_name">◦ PT1 ThaisNaomi-Seki</string>
    <string name="txtRegistro">Enter the name of the user you want, as well as the contact information. The phone has 9 different characters as a minimum.</string>
    <string name="User">User</string>
    <string name="Phone">Phone</string>
    <string name="Password">Password</string>
    <string name="PasswordRepete">Password (repeat)</string>
    <string name="Man">Male</string>
    <string name="Woman">Female</string>
    <string name="txtHelp">Enter your username and password to enter the application. If you do not have one, click on the register button.</string>
    <string name="AP">Main Activity</string>
    <string name="AR">Activity Register</string>
    <string name="Email">E-mail</string>
    <string name="Help">Help</string>
    <string name="NewUser">New User</string>
    <string name="Enter">Enter</string>
    <string name="PhoneHint">(+34)xxx.xx.xx.xx</string>
    <string name="EmailHint">user@email.com</string>
</resources>
