<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".NewUserActivity"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/User"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtTxtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/User"
        android:maxLength="50"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Email"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:hint="@string/EmailHint"
        android:maxLength="50"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Phone"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtTxtPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:maxLength="14"
        android:hint="@string/PhoneHint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/Password"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtTxtPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:hint="@string/Password"
        android:maxLength="12"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/PasswordRepete"
        android:textColor="#000"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="108dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/edtTxtPasswdRpt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="@string/PasswordRepete"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="parent"
        android:maxLength="12"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="44dp" />


        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="107dp"
                android:layout_height="26dp"
                android:text="@string/Man"
                tools:layout_editor_absoluteX="140dp"
                tools:layout_editor_absoluteY="191dp"
                android:onClick="onClickMale"/>

            <View
                android:layout_width="125dp"
                android:layout_height="60dp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="85dp"
                android:layout_height="27dp"
                android:text="@string/Woman"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="191dp"
                android:onClick="onClickFemale"/>
        </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnButtonAjuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Help"
            android:onClick="onClickAjuda"
            android:layout_gravity="left" />

        <View
            android:id="@+id/view"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnButtonNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/NewUser"
            android:onClick="onClickNewUser"/>
    </LinearLayout>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />


</LinearLayout>